Upgrade to Java 17 (#683)